--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,11 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "folium>=0.20.0",
     "geopy>=2.4.1",
+    "matplotlib>=3.10.8",
     "openpyxl>=3.1.5",
+    "ortools>=9.14.6206",
     "pandas>=2.3.3",
     "pyqt6>=6.10.1",
     "pyyaml>=6.0.3",
